<resources>
    <string name="app_name">performance2</string>
    <string name="logo">logo</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="log_in">log_in</string>
    <string name="registrati">registrati</string>
    <string name="PERFORMANCE">PERFORMANCE</string>
    <string name="email">email</string>
    <string name="registrazione">REGISTRAZIONE</string>
    <string name="nome">nome</string>
    <string name="todo">TODO</string>
    <string name="search">Search</string>
    <string name="help">help</string>
    <string name="logout">logout</string>
    <string name="erroreCampObbligatorio">erroreCampObbligatorio</string>
    <string name="storage">storage</string>
    <string name="openDrawer">Navigation Drawer Open</string>
    <string name="closeDrawer">Navigation Drawer Close</string>
    <string name="myfiles">myfiles</string>
    <string name="app">app</string>
    <string name="setting">setting</string>
    <string name="home">Home</string>
    <string name="note">Note</string>
    <string name="news">News</string>
    <string name="to_do">To do</string>
    <string name="upload">Upload</string>
    <string name="calendario">Calendario</string>
    <string name="profilo">Profilo</string>
    <string name="impostazioni">Impostazioni</string>
    <string name="note_maiu">NOTE</string>
    <string name="search_notes">search notes</string>
    <string name="note_title">Note Title</string>
    <string name="note_subtitle">Note Subtitle</string>
    <string name="type_note_here">type note here</string>
    <string name="aggiungi_evento">Aggiungi Evento</string>
    <string name="new_task">New Task</string>
    <string name="save">Save</string>
    <string name="tasks">Tasks</string>
    <string name="title_activity_edit_note">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="autore">Autore</string>

    <string name="_01_gennaio_1990">01 Gennaio 1990</string>
    <string name="titolo">Titolo</string>
    <string name="descrizione">Descrizione</string>
    <string name="fonte">Fonte</string>
    <string name="ora">Ora</string>
    <string name="top_headlines">Top HeadLines</string>
    <string name="file_title">File Title</string>


</resources>