<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <group android:checkableBehavior="single">

        <item android:title="@string/home"
            android:id="@+id/home"
            android:icon="@drawable/ic_baseline_home_24"/>

        <item android:title="@string/note"
            android:id="@+id/note"
            android:icon="@drawable/ic_baseline_library_books_24"/>

        <item android:title="@string/news"
            android:id="@+id/news"
            android:icon="@drawable/ic_baseline_web_24"/>

        <item android:title="@string/to_do"
            android:id="@+id/to_do_list"
            android:icon="@drawable/ic_baseline_format_list_numbered_24"/>

        <item android:title="@string/upload"
            android:id="@+id/upload"
            android:icon="@drawable/ic_baseline_cloud_upload_24"/>

        <item android:title="@string/calendario"
            android:id="@+id/calendario"
            android:icon="@drawable/ic_baseline_calendar_today_24"/>
        <item android:title="Tabella"
            android:id="@+id/tabella"
            android:icon="@drawable/ic_baseline_table_chart_24"/>





    </group>

    <item android:title="App">
        <menu>
            <item android:title="@string/profilo"
                android:icon="@drawable/ic_baseline_account_circle_grigio"/>

            <item android:title="@string/impostazioni"
                android:icon="@drawable/ic_baseline_settings_24"/>


        </menu>


    </item>




</menu>