<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <EditText
        android:id="@+id/newtasktext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:hint="@string/new_task"/>

    <Button
        android:id="@+id/newtaskbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/newtasktext"
        android:layout_alignParentEnd="true"
        android:textSize="16sp"
        android:text="@string/save"
        android:textAllCaps="false"
        android:background="@android:color/transparent"
        android:textColor="@android:color/darker_gray"/>
    <ImageView
        android:id="@+id/imageBack4"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_6sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_baseline_keyboard_arrow_left_24"
        app:tint="@color/colorIcons"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>



</RelativeLayout>